styles.css
/* ... */
.form-group label {
    font-size: 1.2em;
    margin-bottom: 5px;
}

.form-group input, 
.form-group textarea {
    width: 100%;
    padding: 10px;
    font-size: 1em;
    border: none;
    border-radius: 5px;
    background-color: #333;
    color: #fff;
}

.contact-submit {
    background-color: #e60023;
    color: #fff;
    padding: 12px 30px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.contact-submit button:hover {
    transform: scale(1.1);
}

.contact-info a {
        color: #e60023; /* Czerwony kolor linków */
        text-decoration: none;
        transition: color 0.3s ease;
    }

.contact-info a:hover {
        color: #d94336; /* Ciemniejszy czerwony po najechaniu */
        text-decoration: underline;
    }


/* Kontener stopki */
footer {
    background-color: transparent; /* Przezroczyste tło */
    padding-right: 20px;
    padding-left: 20px;
    text-align: center;
	border-bottom: none;
}

.footer-container {
    display: flex;
    justify-content: space-between; /* Elementy w jednym rzędzie */
    align-items: center;
    width: 100%;
    max-width: 1200px; /* Maksymalna szerokość */
    margin: 0 auto;
    transition: transform 0.3s ease-in-out; /* Animacja skalowania */
}

.footer-section {
    flex: 1;
    text-align: center;
}

.footer-logo {
    width: 120px; /* Wycentrowane logo o stałej szerokości */
    height: auto;
}

.footer-section.scroll-up {
    position: relative;
}

#scrollTopBtn {
    background-color: #e60023;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1.5rem;
    padding: 10px 15px;
    transition: background-color 0.3s ease;
}

#scrollTopBtn:hover {
    background-color: #ff4050;
}

.footer-section.social-media ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    gap: 15px;
    justify-content: center;
}

.footer-section.social-media img {
    width: 30px;
    height: auto;
}

.footer-section.social-media p {
    margin-top: 10px;
    font-size: 0.9rem;
}

.footer-bottom {
    font-size: 0.9rem;
    padding-top: 10px;
}

.footer-divider {
    border: 0; /* Usuwamy jakiekolwiek domyślne obramowanie */
    border-top: 2px solid #444; /* Ustawienie koloru linii na #444 */
    margin: 20px 0;
    width: 100%;
    background-color: transparent; /* Upewniamy się, że tło dividera jest przezroczyste */
}
/* ... */

